raffia/tests/error/scss/at-rule/forward/with-space-after-dollar.snap
---
source: raffia/tests/error.rs
---
error: unknown token
  ┌─ with-space-after-dollar.scss:1:24
  │
1 │ @forward "other" with ($ a: b);
  │                        ^


